# gvpe-2.25

./: .gitattributes  .gitignore  .travis.yml  COPYING  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h.in  configure  configure.ac  configure.scan
.github/workflows/: codeql.yml  gvpe-2.25.yml
doc/: .gitignore  Makefile.am  Makefile.in  gvpe.5.pod  gvpe.conf.5.pod  gvpe.info  gvpe.protocol.7.pod
lib/: .gitignore  Makefile.am  Makefile.in  error.c  getopt.c  getopt.h  gettext.h  lstat.c  pidfile.c
libev/: ev++.h  ev.c  libev.m4
m4/: Makefile.am  Makefile.am.in  Makefile.in  fcntl-o.m4  intl.m4  isc-posix.m4  openssl.m4  threadlib.m4  tuntap.m4
po/: .gitignore  gvpe.pot
src/: .gitattributes  .gitignore  Makefile.am  Makefile.in  conf.C  conf.h  connection.C  connection.h  device-cygwin.C  device-darwin.C  device-linux.C  device-tincd.C  device.C  device.h  ether_emu.C  ev_cpp.C  ev_cpp.h  global.h  gvpe.C  gvpectrl.C  netcompat.h  slog.C  slog.h  sockinfo.C  sockinfo.h  util.C  util.h  vpn.C  vpn.h  vpn_dns.C  vpn_tcp.C
src/rohc/: Makefile.am  Makefile.in
src/tincd/: apply
src/tincd/cygwin/: device.c
src/tincd/mingw/: device.c
src/tincd/solaris/: device.c
